--- a/environment/train-conda.yml
+++ b/environment/train-conda.yml
@@ -3,14 +3,20 @@ channels:
   - anaconda
   - conda-forge
 dependencies:
-  - python=3.7.5
+  - python<=3.10.16
   - pip
   - pip:
-      - azureml-mlflow==1.38.0
-      - azure-ai-ml==1.0.0
-      - pyarrow==10.0.0
-      - ruamel.yaml==0.17.21
-      - scikit-learn==0.24.1
-      - pandas==1.2.1
-      - joblib==1.0.0
-      - matplotlib==3.3.3
+    - mlflow<=3.1.1
+    - cffi<=1.17.1
+    - cloudpickle<=2.2.1
+    - defusedxml<=0.7.1
+    - graphviz<=0.20.3
+    - lightgbm<=4.5.0
+    - matplotlib<=3.7.5
+    - numpy<=1.26.4
+    - pandas<=2.2.3
+    - psutil<=6.1.0
+    - pyarrow<=18.1.0
+    - scikit-learn<=1.5.2
+    - scipy<=1.14.1
+name: mlflow-env
