--- a/devops-pipelines/deploy-model-training-pipeline.yml
+++ b/devops-pipelines/deploy-model-training-pipeline.yml
@@ -5,10 +5,10 @@ name: deploy-model-training-pipeline
 
 variables:
   - ${{ if eq(variables['Build.SourceBranchName'], 'main') }}:
-      - template: ../../config-infra-prod.yml
+      - template: ../config-infra-prod.yml
       - group: ProdVars
   - ${{ if ne(variables['Build.SourceBranchName'], 'main') }}:
-      - template: ../../config-infra-dev.yml
+      - template: ../config-infra-dev.yml
       - group: DevVars
 
   - name: version
@@ -66,7 +66,7 @@ stages:
                 Write-Host "Checking for compute cluster 'cpu-cluster'..."
                 $exists = $false
                 try {
-                  if (az ml compute show --name cpu-cluster --resource-group "$(resource_group)" --workspace-name "$(aml_workspace)" 2>$null) {
+                  if (az ml compute show --name cpu-cluster-mi --resource-group "$(resource_group)" --workspace-name "$(aml_workspace)" 2>$null) {
                     Write-Host "Compute cluster exists"
                     $exists = $true
                   }
@@ -74,7 +74,7 @@ stages:
                 if (-not $exists) {
                   Write-Host "Creating compute cluster 'cpu-cluster'..."
                   az ml compute create `
-                    --name cpu-cluster `
+                    --name cpu-cluster-mi `
                     --type amlcompute `
                     --size Standard_DS3_v2 `
                     --min-instances 0 `
@@ -95,7 +95,7 @@ stages:
                 Write-Host "Registering (or bumping) environment 'taxi-train-env'..."
                 az ml environment create `
                   --name taxi-train-env `
-                  --conda-file "./data-science/environment/train-conda.yml" `
+                  --conda-file "./environment/train-conda.yml" `
                   --image mcr.microsoft.com/azureml/openmpi4.1.0-ubuntu20.04 `
                   --resource-group "$(resource_group)" `
                   --workspace-name "$(aml_workspace)"
@@ -156,7 +156,7 @@ stages:
                 Write-Host "Starting training pipeline..."
                 # Use just the environment name without version to always get the latest version
                 # This avoids issues with immutable environments
-                python mlops/azureml/train/run_pipeline.py `
+                python ml-pipelines/cli/train/run_pipeline.py `
                   --experiment_name taxi-train-pipeline `
                   --compute_name cpu-cluster `
                   --data_name taxi-data@latest `
