--- a/config-infra-dev.yml
+++ b/config-infra-dev.yml
@@ -21,11 +21,11 @@ variables:
 
   # For pipeline reference
   resource_group: rg-$(namespace)-$(environment)
-  aml_workspace: mlw-$(namespace)-$(environment)
-  application_insights: mlw$(namespace)$(environment)
-  key_vault: kv$(namespace)$(environment)
-  container_registry: cr$(namespace)$(environment)
-  storage_account: st$(namespace)$(environment)
+  aml_workspace: mlw-$(namespace)-prod #Changed by Heena
+  application_insights: mlw$(namespace)$(environment)8a6
+  key_vault: kv$(namespace)$(environment)8a6
+  container_registry: cr$(namespace)$(environment)8a6
+  storage_account: st$(namespace)$(environment)8a6
 
   # For terraform reference
   terraform_version: 1.3.6
