--- a/config-infra-dev.yml
+++ b/config-infra-dev.yml
@@ -21,7 +21,7 @@ variables:
 
   # For pipeline reference
   resource_group: rg-$(namespace)-$(environment)
-  aml_workspace: mlw-$(namespace)-prod #Changed by Heena
+  aml_workspace: mlw-$(namespace)-$(environment) #Changed by Heena
   application_insights: mlw$(namespace)$(environment)8a6
   key_vault: kv$(namespace)$(environment)8a6
   container_registry: cr$(namespace)$(environment)8a6
