--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-AZURE_SUBSCRIPTION_ID="5bef918d-59f1-49d6-897b-919e5d5c05a0"
-AZURE_RESOURCE_GROUP="rg-gasunimlopsv2-prod"
-AZURE_ML_WORKSPACE="mlw-gasunimlopsv2-prod"
+AZURE_SUBSCRIPTION_ID=""
+AZURE_RESOURCE_GROUP=""
+AZURE_ML_WORKSPACE=""
