--- a/config-infra-dev.yml
+++ b/config-infra-dev.yml
@@ -12,6 +12,7 @@ variables:
   environment: dev
   enable_aml_computecluster: true
   enable_monitoring: false
+  random_suffix: 8a6
 
   # Azure DevOps
   ado_service_connection_rg: gasuni-mlopsv2-rg-sc-dev
@@ -21,11 +22,11 @@ variables:
 
   # For pipeline reference
   resource_group: rg-$(namespace)-$(environment)
-  aml_workspace: mlw-$(namespace)-$(environment) #Changed by Heena
-  application_insights: mlw$(namespace)$(environment)8a6
-  key_vault: kv$(namespace)$(environment)8a6
-  container_registry: cr$(namespace)$(environment)8a6
-  storage_account: st$(namespace)$(environment)8a6
+  aml_workspace: mlw-$(namespace)-$(environment)
+  application_insights: mlw$(namespace)$(environment)$(random_suffix)
+  key_vault: kv$(namespace)$(environment)$(random_suffix)
+  container_registry: cr$(namespace)$(environment)$(random_suffix)
+  storage_account: st$(namespace)$(environment)$(random_suffix)
 
   # For terraform reference
   terraform_version: 1.3.6
