Set up CI with Azure Pipelines
[skip ci]

--- a/ci-cd/azure-pipelines/sdk/train.yml
+++ b/ci-cd/azure-pipelines/sdk/train.yml
@@ -9,7 +9,7 @@ variables:
       - group: ProdVars
   - ${{ if ne(variables['Build.SourceBranchName'], 'main') }}:
       - template: ../config-infra-dev.yml
-      - group: DevVars
+      - group: ProdVars
 
   - name: version
     value: python-sdk-v2
@@ -23,7 +23,7 @@ pool:
 steps:
 - task: UsePythonVersion@0
   inputs:
-    versionSpec: '3.8'
+    versionSpec: '3.12.10'
 - script: pip install -r ci-cd/azure-pipelines/dev-requirements.txt
   displayName: 'pip install notebook reqs'
 - task: Bash@3
@@ -38,7 +38,7 @@ steps:
 
 - task: AzureCLI@2
   inputs:
-    azureSubscription: 'azureml-mldemo' #name of the AzureML service connection defined in Azure Pipelines
+    azureSubscription: $(ado_service_connection_aml_ws) #name of the AzureML service connection defined in Azure Pipelines
     scriptType: 'bash'
     scriptLocation: 'inlineScript'
     inlineScript: |
