--- a/devops-pipelines/test-training.yml
+++ b/devops-pipelines/test-training.yml
@@ -79,67 +79,67 @@ stages:
                 Write-Host "Azure ML environment variables set"
 
           # 4. create or validate compute
-          - task: AzureCLI@2
-            displayName: 'Ensure AML compute cluster'
-            inputs:
-              azureSubscription: $(ado_service_connection_aml_ws)
-              scriptType: ps
-              scriptLocation: inlineScript
-              inlineScript: |
-                Write-Host "Checking for compute cluster 'cpu-cluster'..."
-                $exists = $false
-                try {
-                  if (az ml compute show --name cpu-cluster-mi --resource-group "$(resource_group)" --workspace-name "$(aml_workspace)" 2>$null) {
-                    Write-Host "Compute cluster exists"
-                    $exists = $true
-                  }
-                } catch { }
-                if (-not $exists) {
-                  Write-Host "Creating compute cluster 'cpu-cluster'..."
-                  az ml compute create `
-                    --name cpu-cluster-mi `
-                    --type amlcompute `
-                    --size Standard_DS3_v2 `
-                    --min-instances 0 `
-                    --max-instances 2 `
-                    --tier low_priority `
-                    --resource-group "$(resource_group)" `
-                    --workspace-name "$(aml_workspace)"
-                }
+          # - task: AzureCLI@2
+          #   displayName: 'Ensure AML compute cluster'
+          #   inputs:
+          #     azureSubscription: $(ado_service_connection_aml_ws)
+          #     scriptType: ps
+          #     scriptLocation: inlineScript
+          #     inlineScript: |
+          #       Write-Host "Checking for compute cluster 'cpu-cluster'..."
+          #       $exists = $false
+          #       try {
+          #         if (az ml compute show --name cpu-cluster-mi --resource-group "$(resource_group)" --workspace-name "$(aml_workspace)" 2>$null) {
+          #           Write-Host "Compute cluster exists"
+          #           $exists = $true
+          #         }
+          #       } catch { }
+          #       if (-not $exists) {
+          #         Write-Host "Creating compute cluster 'cpu-cluster'..."
+          #         az ml compute create `
+          #           --name cpu-cluster-mi `
+          #           --type amlcompute `
+          #           --size Standard_DS3_v2 `
+          #           --min-instances 0 `
+          #           --max-instances 2 `
+          #           --tier low_priority `
+          #           --resource-group "$(resource_group)" `
+          #           --workspace-name "$(aml_workspace)"
+          #       }
 
-          # 5. register your conda environment
-          - task: AzureCLI@2
-            displayName: 'Register (or bump) training environment'
-            inputs:
-              azureSubscription: $(ado_service_connection_aml_ws)
-              scriptType: ps
-              scriptLocation: inlineScript
-              inlineScript: |
-                Write-Host "Registering (or bumping) environment 'taxi-train-env'..."
-                az ml environment create `
-                  --name taxi-train-env `
-                  --conda-file "./environment/train-conda.yml" `
-                  --image mcr.microsoft.com/azureml/openmpi4.1.0-ubuntu20.04 `
-                  --resource-group "$(resource_group)" `
-                  --workspace-name "$(aml_workspace)"
-                Write-Host "Environment registered/bumped to latest version."
+          # # 5. register your conda environment
+          # - task: AzureCLI@2
+          #   displayName: 'Register (or bump) training environment'
+          #   inputs:
+          #     azureSubscription: $(ado_service_connection_aml_ws)
+          #     scriptType: ps
+          #     scriptLocation: inlineScript
+          #     inlineScript: |
+          #       Write-Host "Registering (or bumping) environment 'taxi-train-env'..."
+          #       az ml environment create `
+          #         --name taxi-train-env `
+          #         --conda-file "./environment/train-conda.yml" `
+          #         --image mcr.microsoft.com/azureml/openmpi4.1.0-ubuntu20.04 `
+          #         --resource-group "$(resource_group)" `
+          #         --workspace-name "$(aml_workspace)"
+          #       Write-Host "Environment registered/bumped to latest version."
                 
-          # 6. register the CSV as a Data Asset
-          - task: AzureCLI@2
-            displayName: 'Register data asset'
-            inputs:
-              azureSubscription: $(ado_service_connection_aml_ws)
-              scriptType: ps
-              scriptLocation: inlineScript
-              inlineScript: |
-                Write-Host "Registering data asset 'taxi-data'..."
-                az ml data create `
-                  --name taxi-data `
-                  --path data/taxi-data.csv `
-                  --type uri_file `
-                  --description "taxi-training-dataset" `
-                  --resource-group "$(resource_group)" `
-                  --workspace-name "$(aml_workspace)"
+          # # 6. register the CSV as a Data Asset
+          # - task: AzureCLI@2
+          #   displayName: 'Register data asset'
+          #   inputs:
+          #     azureSubscription: $(ado_service_connection_aml_ws)
+          #     scriptType: ps
+          #     scriptLocation: inlineScript
+          #     inlineScript: |
+          #       Write-Host "Registering data asset 'taxi-data'..."
+          #       az ml data create `
+          #         --name taxi-data `
+          #         --path data/taxi-data.csv `
+          #         --type uri_file `
+          #         --description "taxi-training-dataset" `
+          #         --resource-group "$(resource_group)" `
+          #         --workspace-name "$(aml_workspace)"
           # 6.4 Set Python version to Path
 
           # 7. kick off your SDK pipeline
@@ -175,10 +175,22 @@ stages:
 
 
           - task: AzureCLI@2
+            displayName: 'Run training pipeline'
             inputs:
                   azureSubscription: $(ado_service_connection_aml_ws)
-                  scriptType: 'bash'
-                  scriptLocation: 'inlineScript'
+                  scriptType: ps
+                  scriptLocation: inlineScript
                   inlineScript: |
-                    train.sh
+                    Write-Host "Running Training pipeline"
+                    # TRAIN
+                    # Create train job compute cluster
+                    #az ml compute create --file train/compute.yml
+                    # Register data asset 
+                    az ml data create --file train/data.yml
+                    # Register train environment 
+                    az ml environment create --file train/environment.yml
+                    # Create pipeline job
+                    az ml job create --file train/pipeline.yml
+                    # Create pipeline job with automl training job
+                    az ml job create --file train/pipeline_automl.yml
                   workingDirectory: 'ml-pipelines/cli'
