--- a/devops-pipelines/test-training.yml
+++ b/devops-pipelines/test-training.yml
@@ -28,40 +28,19 @@ stages:
         steps:
           # 1. checkout your repo
           - checkout: self
-          # - task: UsePythonVersion@0
-          #   inputs:
-          #     versionSpec: '3.13'
-          #     addToPath: true
-          #     architecture: 'x64'
-              
-          # # 6.5 Setup local Python venv for SDK run
-          # - task: PowerShell@2
-          #   displayName: 'Setup Python Virtual Environment'
-          #   inputs:
-          #     targetType: inline
-          #     script: |
-          #       Write-Host "Creating and activating venv..."
-          #       python -m venv .pipeline-venv
-          #       & .\.pipeline-venv\Scripts\Activate.ps1
-          #       Write-Host "Installing packages..."
-          #       python -m pip install --upgrade pip
-          #       python -m pip install marshmallow==3.14.0
-          #       python -m pip install azure-ai-ml==1.0.0 azure-identity==1.10.0 pyyaml==6.0 python-dotenv==1.0.0
-          #       Write-Host "Installed packages:"
-          #       python -m pip list
-          #       deactivate
+    
                 
           # 2. Install Azure ML extension
-          # - task: AzureCLI@2
-          #   displayName: 'Install Azure ML Extension'
-          #   inputs:
-          #     azureSubscription: $(ado_service_connection_aml_ws)
-          #     scriptType: ps
-          #     scriptLocation: inlineScript
-          #     inlineScript: |
-          #       Write-Host "Installing Azure ML CLI extension... $(ado_service_connection_aml_ws)"
-          #       az extension add --name ml --yes
-          #       az extension list
+          - task: AzureCLI@2
+            displayName: 'Install Azure ML Extension'
+            inputs:
+              azureSubscription: $(ado_service_connection_aml_ws)
+              scriptType: ps
+              scriptLocation: inlineScript
+              inlineScript: |
+                Write-Host "Installing Azure ML CLI extension... $(ado_service_connection_aml_ws)"
+                az extension add --name ml --yes
+                az extension list
 
           # 3. authenticate & “attach” the AML workspace
           - task: AzureCLI@2
@@ -78,100 +57,52 @@ stages:
                 Write-Host "##vso[task.setvariable variable=AZURE_ML_WORKSPACE]$(aml_workspace)"
                 Write-Host "Azure ML environment variables set"
 
-          # 4. create or validate compute
-          # - task: AzureCLI@2
-          #   displayName: 'Ensure AML compute cluster'
-          #   inputs:
-          #     azureSubscription: $(ado_service_connection_aml_ws)
-          #     scriptType: ps
-          #     scriptLocation: inlineScript
-          #     inlineScript: |
-          #       Write-Host "Checking for compute cluster 'cpu-cluster'..."
-          #       $exists = $false
-          #       try {
-          #         if (az ml compute show --name cpu-cluster-mi --resource-group "$(resource_group)" --workspace-name "$(aml_workspace)" 2>$null) {
-          #           Write-Host "Compute cluster exists"
-          #           $exists = $true
-          #         }
-          #       } catch { }
-          #       if (-not $exists) {
-          #         Write-Host "Creating compute cluster 'cpu-cluster'..."
-          #         az ml compute create `
-          #           --name cpu-cluster-mi `
-          #           --type amlcompute `
-          #           --size Standard_DS3_v2 `
-          #           --min-instances 0 `
-          #           --max-instances 2 `
-          #           --tier low_priority `
-          #           --resource-group "$(resource_group)" `
-          #           --workspace-name "$(aml_workspace)"
-          #       }
+          #4. create or validate compute
+          - task: AzureCLI@2
+            displayName: 'Ensure AML compute cluster'
+            inputs:
+              azureSubscription: $(ado_service_connection_aml_ws)
+              scriptType: ps
+              scriptLocation: inlineScript
+              inlineScript: |
+                Write-Host "Checking for compute cluster 'cpu-cluster'..."
+                $exists = $false
+                try {
+                  if (az ml compute show --name cpu-cluster --resource-group "$(resource_group)" --workspace-name "$(aml_workspace)" 2>$null) {
+                    Write-Host "Compute cluster exists"
+                    $exists = $true
+                  }
+                } catch { }
+                if (-not $exists) {
+                  Write-Host "Creating compute cluster 'cpu-cluster'..."
+                  # Create train job compute cluster
+                  az ml compute create --file train/compute.yml --resource-group "$(resource_group)" --workspace-name "$(aml_workspace)"
 
-          # # 5. register your conda environment
-          # - task: AzureCLI@2
-          #   displayName: 'Register (or bump) training environment'
-          #   inputs:
-          #     azureSubscription: $(ado_service_connection_aml_ws)
-          #     scriptType: ps
-          #     scriptLocation: inlineScript
-          #     inlineScript: |
-          #       Write-Host "Registering (or bumping) environment 'taxi-train-env'..."
-          #       az ml environment create `
-          #         --name taxi-train-env `
-          #         --conda-file "./environment/train-conda.yml" `
-          #         --image mcr.microsoft.com/azureml/openmpi4.1.0-ubuntu20.04 `
-          #         --resource-group "$(resource_group)" `
-          #         --workspace-name "$(aml_workspace)"
-          #       Write-Host "Environment registered/bumped to latest version."
+
+          # 5. register your conda environment
+          - task: AzureCLI@2
+            displayName: 'Register (or bump) training environment'
+            inputs:
+              azureSubscription: $(ado_service_connection_aml_ws)
+              scriptType: ps
+              scriptLocation: inlineScript
+              inlineScript: |
+                Write-Host "Registering (or bumping) environment 'taxi-train-env'..."
+                az ml environment create --file train/environment.yml --resource-group "$(resource_group)" --workspace-name "$(aml_workspace)"
+                    
+                Write-Host "Environment registered/bumped to latest version."
                 
-          # # 6. register the CSV as a Data Asset
-          # - task: AzureCLI@2
-          #   displayName: 'Register data asset'
-          #   inputs:
-          #     azureSubscription: $(ado_service_connection_aml_ws)
-          #     scriptType: ps
-          #     scriptLocation: inlineScript
-          #     inlineScript: |
-          #       Write-Host "Registering data asset 'taxi-data'..."
-          #       az ml data create `
-          #         --name taxi-data `
-          #         --path data/taxi-data.csv `
-          #         --type uri_file `
-          #         --description "taxi-training-dataset" `
-          #         --resource-group "$(resource_group)" `
-          #         --workspace-name "$(aml_workspace)"
-          # 6.4 Set Python version to Path
+          # 6. register the CSV as a Data Asset
+          - task: AzureCLI@2
+            displayName: 'Register data asset'
+            inputs:
+              azureSubscription: $(ado_service_connection_aml_ws)
+              scriptType: ps
+              scriptLocation: inlineScript
+              inlineScript: |
+                Write-Host "Registering data asset 'taxi-data'..."
+                az ml data create --file train/data.yml --resource-group "$(resource_group)" --workspace-name "$(aml_workspace)"
 
-          # 7. kick off your SDK pipeline
-          # - task: PowerShell@2
-          #   displayName: 'Run training pipeline'
-          #   env:
-          #     AZURE_SUBSCRIPTION_ID: $(AZURE_SUBSCRIPTION_ID)
-          #     AZURE_RESOURCE_GROUP:   $(AZURE_RESOURCE_GROUP)
-          #     AZURE_ML_WORKSPACE:     $(AZURE_ML_WORKSPACE)
-          #   inputs:
-          #     targetType: inline
-          #     script: |
-          #       Write-Host "Activating venv..."
-          #       & .\.pipeline-venv\Scripts\Activate.ps1
-
-          #       Write-Host "Environment variables available in PowerShell script:"
-          #       Write-Host "AZURE_SUBSCRIPTION_ID: $env:AZURE_SUBSCRIPTION_ID"
-          #       Write-Host "AZURE_RESOURCE_GROUP: $env:AZURE_RESOURCE_GROUP"
-          #       Write-Host "AZURE_ML_WORKSPACE: $env:AZURE_ML_WORKSPACE"
-                
-          #       Write-Host "Starting training pipeline..."
-          #       # Use just the environment name without version to always get the latest version
-          #       # This avoids issues with immutable environments
-          #       python ml-pipelines/cli/train/run_pipeline.py `
-          #         --experiment_name taxi-train-pipeline `
-          #         --compute_name cpu-cluster `
-          #         --data_name taxi-data@latest `
-          #         --environment_name taxi-train-env `
-          #         --enable_monitoring $(enable_monitoring) `
-          #         --table_name taximonitoring
-
-          #       deactivate
 
 
           - task: AzureCLI@2
@@ -182,15 +113,6 @@ stages:
                   scriptLocation: inlineScript
                   inlineScript: |
                     Write-Host "Running Training pipeline"
-                    # TRAIN
-                    # Create train job compute cluster
-                    #az ml compute create --file train/compute.yml --resource-group "$(resource_group)" --workspace-name "$(aml_workspace)"
-                    # Register data asset 
-                    az ml data create --file train/data.yml --resource-group "$(resource_group)" --workspace-name "$(aml_workspace)"
-                    # Register train environment 
-                    az ml environment create --file train/environment.yml --resource-group "$(resource_group)" --workspace-name "$(aml_workspace)"
-                    # Create pipeline job
                     az ml job create --file train/pipeline.yml --resource-group "$(resource_group)" --workspace-name "$(aml_workspace)"
-                    # Create pipeline job with automl training job
-                    az ml job create --file train/pipeline_automl.yml --resource-group "$(resource_group)" --workspace-name "$(aml_workspace)"
+                    
                   workingDirectory: 'ml-pipelines/cli'
